[gd_scene load_steps=13 format=3 uid="uid://deo7mdjt445xm"]

[ext_resource type="Script" path="res://scripts/cyber_upgrade_ui.gd" id="1_16etv"]
[ext_resource type="Theme" uid="uid://d1knr2bsaf0tp" path="res://ui_theme.tres" id="1_olc5l"]
[ext_resource type="Texture2D" uid="uid://d0kt0keii38vu" path="res://png/skeleton.png" id="2_wb1n7"]
[ext_resource type="Shader" path="res://shaders/drop_shadow.gdshader" id="3_ojsgq"]
[ext_resource type="Texture2D" uid="uid://c7alrethk6apq" path="res://png/lock.png" id="4_6l8bd"]
[ext_resource type="Texture2D" uid="uid://dol2xxpng7ywy" path="res://png/arrow.png" id="5_v3oom"]
[ext_resource type="Texture2D" uid="uid://bgdt7namc7xd" path="res://png/grapple_icon.png" id="7_xs8kh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_txldl"]
shader = ExtResource("3_ojsgq")
shader_parameter/debug = false
shader_parameter/border_scale = 1.145
shader_parameter/shadow_offset = Vector2(-1.75, -2.965)
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/blur_amount = 0.0
shader_parameter/shadow_scale = 1.0
shader_parameter/disable_rotating = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1rpe"]
bg_color = Color(0, 0, 0, 0.643137)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6uwkk"]
bg_color = Color(0, 0, 0, 0)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f8muu"]
bg_color = Color(0, 0, 0, 0)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ov5ye"]
shader = ExtResource("3_ojsgq")
shader_parameter/debug = false
shader_parameter/border_scale = 1.0
shader_parameter/shadow_offset = Vector2(-2, -2)
shader_parameter/color = null
shader_parameter/blur_amount = 0.0
shader_parameter/shadow_scale = 1.5
shader_parameter/disable_rotating = false

[node name="cyber_upgrade_ui" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_16etv")
panel_height = 300
increase = 10

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.0431373, 0.0901961, 1)

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_txldl")
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -183.0
offset_top = -8.0
offset_right = 131.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wb1n7")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 22.0
offset_top = 18.0
offset_right = 349.0
offset_bottom = 98.0
theme = ExtResource("1_olc5l")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 7
theme_override_constants/shadow_offset_x = 7
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[shake]CYBER UPGRADES"

[node name="Head" type="Button" parent="."]
layout_mode = 0
offset_left = 391.0
offset_top = 40.0
offset_right = 461.0
offset_bottom = 110.0
theme = ExtResource("1_olc5l")
theme_override_styles/focus = SubResource("StyleBoxFlat_k1rpe")
theme_override_styles/disabled = SubResource("StyleBoxFlat_k1rpe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k1rpe")
theme_override_styles/normal = SubResource("StyleBoxFlat_k1rpe")
disabled = true

[node name="TextureRect" type="TextureRect" parent="Head"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -29.0
offset_right = 29.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_6l8bd")

[node name="RichTextLabel" type="RichTextLabel" parent="Head"]
texture_filter = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -17.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]HEAD"

[node name="Arm" type="Button" parent="."]
layout_mode = 0
offset_left = 362.0
offset_top = 168.0
offset_right = 432.0
offset_bottom = 238.0
theme = ExtResource("1_olc5l")
theme_override_styles/focus = SubResource("StyleBoxFlat_k1rpe")
theme_override_styles/disabled = SubResource("StyleBoxFlat_k1rpe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k1rpe")
theme_override_styles/normal = SubResource("StyleBoxFlat_k1rpe")
disabled = true

[node name="TextureRect" type="TextureRect" parent="Arm"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -29.0
offset_right = 29.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_6l8bd")

[node name="RichTextLabel" type="RichTextLabel" parent="Arm"]
texture_filter = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -17.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]ARM
"

[node name="Hip" type="Button" parent="."]
layout_mode = 0
offset_left = 331.0
offset_top = 294.0
offset_right = 401.0
offset_bottom = 364.0
theme = ExtResource("1_olc5l")
theme_override_styles/focus = SubResource("StyleBoxFlat_k1rpe")
theme_override_styles/disabled = SubResource("StyleBoxFlat_k1rpe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k1rpe")
theme_override_styles/normal = SubResource("StyleBoxFlat_k1rpe")
disabled = true

[node name="TextureRect" type="TextureRect" parent="Hip"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -29.0
offset_right = 29.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_6l8bd")

[node name="RichTextLabel" type="RichTextLabel" parent="Hip"]
texture_filter = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -17.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]HIP
"

[node name="Leg" type="Button" parent="."]
layout_mode = 0
offset_left = 407.0
offset_top = 447.0
offset_right = 477.0
offset_bottom = 517.0
theme = ExtResource("1_olc5l")
theme_override_styles/focus = SubResource("StyleBoxFlat_k1rpe")
theme_override_styles/disabled = SubResource("StyleBoxFlat_k1rpe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k1rpe")
theme_override_styles/normal = SubResource("StyleBoxFlat_k1rpe")
disabled = true

[node name="TextureRect" type="TextureRect" parent="Leg"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -29.0
offset_right = 29.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_6l8bd")

[node name="RichTextLabel" type="RichTextLabel" parent="Leg"]
texture_filter = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -17.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]LEG"

[node name="Save" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -91.0
offset_right = -21.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxFlat_6uwkk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f8muu")
flat = true

[node name="TextureRect" type="TextureRect" parent="Save"]
texture_filter = 1
material = SubResource("ShaderMaterial_ov5ye")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -27.0
offset_right = -26.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_v3oom")

[node name="Arm panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 103.0
offset_top = 161.0
offset_right = 339.0
offset_bottom = 233.0

[node name="HBoxContainer" type="HBoxContainer" parent="Arm panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="Arm panel/HBoxContainer"]
layout_mode = 2
icon = ExtResource("7_xs8kh")

[node name="Hip panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 71.0
offset_top = 289.0
offset_right = 307.0
offset_bottom = 361.0

[node name="HBoxContainer" type="HBoxContainer" parent="Hip panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="Hip panel/HBoxContainer"]
layout_mode = 2
icon = ExtResource("7_xs8kh")

[connection signal="pressed" from="Head" to="." method="_on_head_pressed"]
[connection signal="pressed" from="Arm" to="." method="_on_arm_pressed"]
[connection signal="pressed" from="Hip" to="." method="_on_hip_pressed"]
[connection signal="pressed" from="Leg" to="." method="_on_leg_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
